# backward_induction

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  backward_induction.cpp  config.xml  cpu_solver.cpp  cpu_solver.h  dp_model.cpp  dp_model.h  dp_solver.cpp  dp_solver.h  dp_utility.h  exam_policy.py  exam_policy_cost_test.py  exam_policy_det.py  exam_policy_det_compare.py  exam_policy_det_iterative.py  exam_policy_sto_iterative.py  forward_search.cpp  forward_search.h  forzen_lake.cpp  front_car.cpp  front_car.h  front_car_data_rand_test.csv  front_car_sim.py  frozen_lake.cpp  gpu_calc.cu  gpu_calc.h  gpu_kernel.h  gpu_share.h  gpu_solver.cu  gpu_solver.h  gpu_solver_beta.cu  gpu_solver_beta.h  hello.cpp  main.cpp  makefile  mc_test.py  model.cpp  model.h  (+33 more)
2_kernel_cu/: gpu_kernel.h  gpu_solver.cu
front_car_behavior_generator/: front_car_sim.py  output
obsolete/: compare_policy.py  discretize_test.py  examine_value_table.py  show_param.py  show_r_cost.py  show_t_cost.py  value_hist.py
openai/: gym_binding.cpp  random_agent.cpp  value_iteration.cpp
quantization_test/: auto_sim.py  compare_cost.py  compare_policy.py  discretize_test.py  examine_value_table.py  front_car_sim.py  log.txt.bak  policy_test.py  rule_based_ctrl.py  rule_based_policy_test.py  test_code_assembly.py  traj_viz.py  value_vs_cost.py  value_vs_cost_vs_rule.py
sim_tool/: py_sim.py  search.py
test_cases/: front_car_data_2case.csv  front_car_data_bi10_c2.csv  front_car_data_bi10_c3.csv  front_car_data_fix25.csv  front_car_data_fix29.csv  front_car_data_fix80.csv  front_car_data_fully_rand.csv
(+10 files in other folders)
